Tue Nov 22 22:58:55 2005  Chris Cleeland  <cleeland@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Any/PushConsumer.cpp:
        * orbsvcs/orbsvcs/Notify/Sequence/SequencePushConsumer.cpp:
        * orbsvcs/orbsvcs/Notify/Structured/StructuredPushConsumer.cpp:

	  Fixed warnings about preferring one conversion over another
	  from a _var that appeared on a couple of platforms.

Tue Nov 22 07:49:59 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

        * tao/ORB_Core.cpp (init): Updated the code to use 1 or 0 for
          options, rather than YES or NO.  Thanks to Abhi Sachdev for
          motivating this cleanup.

        * docs/Options.html: Updated the documentation to remove the use of
          YES and NO as options and replace them with 1 or 0 to be
          consistent with the other options.

Tue Nov 22 04:14:05 2005  Bala Natarajan  <bala_natarajan at symantec dot com>

        * TAO_IDL/be_include/be_visitor_traits.h:

          Added missing operation declaration.

Tue Nov 22 01:42:48 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * orbsvcs/orbsvcs/PortableGroup.mpc:

          Rather than disable this project in the ACE_FOR_TAO
          configuration, inherit from acesocketslib_for_tao to allow it to
          be used.

Tue Nov 22 09:33:30 (IST) 2005  Bala Natarajan <bala_natarajan@symantec.com>

        * orbsvcs/orbsvcs/PortableGroup.mpc:

          Do not build in ACE_FOR_TAO configuration.

Mon Nov 21 19:28:51 2005  Chris Cleeland  <cleeland_c@ociweb.com>

        * orbsvcs/orbsvcs/Notify/EventChannel.h: Removed mistakenly left
          in attempt to #include EventChannel.inl.

Mon Nov 21 22:22:41 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_valuebox/valuebox_cs.cpp:

          Removed commented out code.

        * TAO_IDL/be/be_visitor_traits.cpp:
        * TAO_IDL/be/be_visitor_valuetype/valuetype_cs.cpp:
        * TAO_IDL/be_include/be_visitor_traits.h:
