@@ -1,3 +1,13 @@
+Wed Nov 23 10:07:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/BiDirectional/run_test_ipv6.pl:
+        * tests/CallbackTest/run_test_ipv6.pl:
+        * tests/IPV6/run_test.pl:
+        * orbsvcs/tests/Notify/Basic/run_test_ipv6.pl:
+          Updated these scripts because of the following change, use
+          1|0 instead of YES|NO
+          Tue Nov 22 07:49:59 2005  Douglas C. Schmidt
+
 Tue Nov 22 22:58:55 2005  Chris Cleeland  <cleeland@ociweb.com>
 
         * orbsvcs/orbsvcs/Notify/Any/PushConsumer.cpp:
